# idxd-config

./: .gitignore  LICENSE_GPL_2_0  Makefile.am  Makefile.am.in  README.md  TODO  accfg-test.spec.in  accfg.spec.in  builtin.h  configure.ac  debbuild.sh  debdch.sh  dsactl.spec.in  git-version  make-git-snapshot.sh  rpmbuild-test.sh  rpmbuild.sh  test.h  test_all.sh
Documentation/: copyright.txt
Documentation/accfg/: Makefile.am  accel-config-config-device.txt  accel-config-config-engine.txt  accel-config-config-group.txt  accel-config-config-user-default.txt  accel-config-config-wq.txt  accel-config-create-mdev.txt  accel-config-disable-device.txt  accel-config-disable-wq.txt  accel-config-enable-device.txt  accel-config-enable-wq.txt  accel-config-list.txt  accel-config-load-config.txt  accel-config-remove-mdev.txt  accel-config-save-config.txt  accel-config.txt
Documentation/dsactl/: dsactl-config-device.txt  dsactl-config-engine.txt  dsactl-config-group.txt  dsactl-config-wq.txt  dsactl-disable-device.txt  dsactl-disable-wq.txt  dsactl-enable-device.txt  dsactl-enable-wq.txt  dsactl-list.txt  dsactl-load-config.txt
accfg/: Makefile.am  accel-config.c  accfg.h  config.c  config_attr.c  enable.c  idxd.h  libaccel_config.h  list.c  mdev.c  test.c
accfg/lib/: LICENSE_LGPL_2_1  Makefile.am  libaccel-config.pc.in  libaccel-config.sym  libaccfg.c  private.h
ccan/endian/: endian.h
ccan/list/: list.h
ccan/minmax/: minmax.h
contrib/: accel-config.conf.sample
contrib/configs/: app_profile.conf  net_profile.conf  os_profile.conf  profilenote.txt  storage_profile.conf  user_default_profile.conf
debian/: accel-config-test.install  accel-config.install  changelog  control  copyright  libaccel-config-dev.install  libaccel-config.install  libaccel-config1.install  rules  watch
dsactl/: Makefile.am  config.c  config.conf  config_attr.c  dsactl-config.service  dsactl.c  dsactl.h  enable.c  libdsactl.h  list.c
dsactl/lib/: .private.h.swp  Makefile.am  libdsactl.c  libdsactl.pc.in  libdsactl.sym  private.h
licenses/: accel-config-licenses  libaccel-config-licenses
sles/: header
test/: Makefile.am  README.md  accel_test.c  accel_test.h  accfg_test.h  common  config.sh  core.c  crc16_t10_lookup.h  dsa.c  dsa.h  dsa_config_test_runner.sh  dsa_crc32.h  dsa_memmove.sh  dsa_prep.c  dsa_test.c  dsa_user_test_runner.sh  iaa.c  iaa.h  iaa_prep.c  iaa_test.c  iaa_user_test_runner.sh  libaccfg.c  prep.c
test/algorithms/: iaa_compress.c  iaa_compress.h  iaa_crc64.c  iaa_crc64.h  iaa_crypto.c  iaa_crypto.h  iaa_filter.c  iaa_filter.h  iaa_zcompress.c  iaa_zcompress.h
test/configs/: 2g2q_user_1.conf  2g2q_user_2.conf
util/: abspath.c  bitmap.c  bitmap.h  filter.c  filter.h  fletcher.h  help.c  json.c  json.h  list.h  log.c  log.h  main.c  main.h  parse-options.c  parse-options.h  size.c  size.h  strbuf.c  strbuf.h  sysfs.c  sysfs.h  util.h  wrapper.c
